Fix wrap of summaries in artist spotlight

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -2554,6 +2554,8 @@ a {
                 color: #000;
                 font-family: Georgia, 'Times New Roman', Times, serif;
                 font-weight: lighter;
+                white-space: pre-wrap;
+                width: 313px;
             }
         }
 
